--- a/starter/src/index.css
+++ b/starter/src/index.css
@@ -171,7 +171,7 @@ Cart
   margin: 0 auto;
   margin-top: 40px;
   padding: 2.5rem 0;
-  /* max-width: var(--fixed-width); */
+  max-width: var(--fixed-width);
 }
 .cart h2 {
   text-transform: uppercase;
